--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Twitter Bot for @varacast",
   "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
