--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/marciosmelo/varabot#readme",
   "dependencies": {
     "eslint": "^4.17.0",
+    "jshint": "^2.9.5",
     "twit": "^2.2.9",
     "twitter": "^1.7.1"
   }
